--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,6 +10,7 @@
       "@/layout/*":["src/components/layout/*"],
       "@/module/*":["src/components/module/*"],
       "@/template/*":["src/components/template/*"],
+      "@/api/*":["src/app/api/*"],
     }
   }
 }
