--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://mhjalifathi:m.h.1380@cluster0.rc0dhmn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+NEXTAUTH_URL = "http://localhost:3000"
+NEXTAUTH_SECRET="realstate"
